Heavily optimize allocation-wise and replace String usage with byte[]